DO/004-rook/005-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapp
  labels:
    app: tapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tapp
  template:
    metadata:
      labels:
        app: tapp
    spec:
      containers:
        - name: tapp
          image: "docker-registry.phaseiilabs.com/tapp:0.0.8" # docker run -p 8082:80 docker-registry.phaseiilabs.com/tapp:0.0.2
          ports:
            - containerPort: 80
          #          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: image-store
              mountPath: /usr/src/app/pvc
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: image-store
          persistentVolumeClaim:
            claimName: cephfs-pvc
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: tapp-service
spec:
  #  type: NodePort
  ports:
    - targetPort: 80
      port: 80
  #      nodePort: 30010
  selector:
    app: tapp
