DO/004-rook/piiapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piiapp
  labels:
    app: piiapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: piiapp
  template:
    metadata:
      labels:
        app: piiapp
    spec:
      containers:
        - name: piiapp
          image: 'sdpii/piiapp:0.0.22'
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: piiapp-service
spec:
  #  type: NodePort
  ports:
    - targetPort: 80
      port: 80
  #      nodePort: 30010
  selector:
    app: piiapp
